--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         </div>
         <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
           <a href="https://www.oxfordaqa.com/"><img src="./imgs/accredidation-6.jpg" id="Img-Accredidation" alt="Oxford"
-              class="img-responsive hvr-pulse-shrink"></a>
+              class="img-responsive hvr-shrink"></a>
         </div>
       </div>
     </div>
